# conmon-rs

./: .codecov.yml  .gitignore  .golangci.yml  .packit.sh  .packit.yaml  .prettierignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Cross.toml  Makefile  OWNERS  OWNERS_ALIASES  README.md  Vagrantfile  build.rs  conmon-rs.spec.rpkg  crates.js  deny.toml  dependencies.yaml  flake.nix  go.mod  go.sum  help.html  release.md  search-index.js  settings.html  source-files.js  src-files.js  usage.md
.cargo/: config.toml
.cargo-vendor/anyhow/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/bytes/: .cargo-checksum.json
.cargo-vendor/capnp/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/capnp-futures/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/capnp-rpc/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/capnpc/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/cc/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/clap/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/clap_builder/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/command-fds/: .cargo-checksum.json  Cargo.toml  README.md
.cargo-vendor/embedded-io/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/errno/: .cargo-checksum.json  CHANGELOG.md  Cargo.toml
.cargo-vendor/filedesc/: .cargo-checksum.json  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  README.tpl  rustfmt.toml
.cargo-vendor/futures-lite/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/getset/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/git2/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/hyper/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/hyper-timeout/: Cargo.toml
.cargo-vendor/inotify/: Cargo.toml
.cargo-vendor/io-lifetimes/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/is-terminal/: .cargo-checksum.json
.cargo-vendor/is_debug/: .cargo-checksum.json  Cargo.toml  LICENSE  README.md
.cargo-vendor/itoa/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/kqueue/: .cargo-checksum.json  CHANGELOG.md  Cargo.toml  TODOs.org  Vagrantfile
.cargo-vendor/kqueue-sys/: .cargo-checksum.json  CHANGELOG.md  Cargo.toml  README.md  Vagrantfile
.cargo-vendor/libc/: .cargo-checksum.json
.cargo-vendor/libgit2-sys/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/libsystemd/: .cargo-checksum.json  COPYRIGHT  Cargo.toml  README.md
.cargo-vendor/libz-sys/: .cargo-checksum.json  Cargo.toml  build.rs
.cargo-vendor/linux-raw-sys/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/mio/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/mockall/: .cargo-checksum.json
.cargo-vendor/multimap/: .cargo-checksum.json  Cargo.toml  README.md
.cargo-vendor/nix/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/nix-0.27.1/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/notify/: .cargo-checksum.json  Cargo.toml  README.md
.cargo-vendor/object/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/opentelemetry-otlp/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/opentelemetry-proto/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/opentelemetry-semantic-conventions/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/ordered-float/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/pin-project-lite/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/ppv-lite86/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/proc-macro2/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/prost/: .cargo-checksum.json
.cargo-vendor/prost-derive/: .cargo-checksum.json
.cargo-vendor/quote/: .cargo-checksum.json
.cargo-vendor/rand/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/rand_chacha/: .cargo-checksum.json
.cargo-vendor/rand_core/: .cargo-checksum.json
.cargo-vendor/redox_syscall/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/regex/: .cargo-checksum.json
.cargo-vendor/rustix/: .cargo-checksum.json  Cargo.toml
.cargo-vendor/sendfd/: .cargo-checksum.json  Cargo.toml  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md  create-marker  dependabot.yml  install-deps  setup  typos.toml  update-vmlinux
conmon/: all.html  index.html  sidebar-items.js  struct.Server.html  struct.Version.html
conmon-rs-tests/: Cargo.toml
conmon-rs-tests/tests/: lib.rs
conmon-rs/client/: Cargo.toml
conmon-rs/client/src/: main.rs
conmon-rs/common/: Cargo.toml  build.rs
conmon-rs/common/proto/: conmon.capnp
conmon-rs/common/src/: lib.rs
conmon-rs/server/: Cargo.toml  build.rs
conmon-rs/server/src/: attach.rs  bounded_hashmap.rs  capnp_util.rs  child.rs  child_reaper.rs  config.rs  console.rs  container_io.rs  container_log.rs  cri_logger.rs  fd_mapping.rs  fd_socket.rs  inactivity.rs  init.rs  iostreams.rs  journal.rs  json_logger.rs  lib.rs  listener.rs  macros.rs  main.rs  oom_watcher.rs  pause.rs  pidwatch.rs  rpc.rs  server.rs  stream.rs  streaming_server.rs  streams.rs  telemetry.rs  terminal.rs  version.rs
conmon-rs/server/src/bpf/: mod.rs  pidwatch.bpf.c  pidwatch.h
conmon-rs/server/src/container_log/: cri.rs  cri_logger.rs  journald.rs  json.rs  json_logger.rs  mod.rs  types.rs
conmon_common/: all.html  index.html  sidebar-items.js
conmonrs/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Server.html  struct.Version.html
conmonrs_cli/: all.html  fn.main.html  index.html
nix/: derivation.nix  nixpkgs.json  overlay.nix
proto/: conmon.capnp  conmon.proto  go-patch
scripts/: get
search.index/: 000d57fbbe3e.js  0016ecc9393d.js  002b430c71.js  0061904051.js  0063699a3e1a.js  00ce90b1abdc.js  00da04a449a5.js  00dd29b5e3ce.js  00e5791291.js  00efc31cb171.js  011117032c.js  011140464e.js  016fb9d8cc5c.js  0173251f65a7.js  0176b52126e2.js  018ba57230ec.js  01a75cb7adf3.js  01b0bb381528.js  01b84294e168.js  01c27e796a65.js  01cfe3413f.js  01d515825ee3.js  01e7a536bdfc.js  0206d415d1.js  02145dddbaff.js  0229cf7f2439.js  027927a9e108.js  029ab773bf2e.js  02a339e846ca.js  03340c199d0f.js  0363b11471.js  0366e9c6310d.js  0379788fce.js  037b1a544616.js  038a8e060eb4.js  039f9f859da8.js  03b173e61f.js  03bd9e667b9a.js  03c238d0ff.js  03ca3fbbca30.js  (+1486 more)
src/: client.rs  config.rs  server.rs  stream.rs
tests/: Vagrantfile  integration.rs
(+896 files in other folders)
