[package]
name = "conmon-rs-tests"
version = "0.1.0"
edition = "2021"
autotests = false
autobenches = false

[[test]]
name = "integration"
path = "tests/lib.rs"

[dependencies]
anyhow = "1.0.45"
conmon-common = { path = "../conmon-rs/common" }
futures = "0.3.17"
log = { version = "0.4.14", features = ["serde", "std"] }
tokio = { version = "1.14.0", features = ["fs", "macros", "net", "process", "rt", "signal", "time"] }
tokio-util = { version = "0.6.9", features = ["compat"] }
nix = "0.23.0"

[dev-dependencies]
tempfile = "3.2.0"
