[package]
name = "conmonrs-cli"
version = "0.8.0"
edition = "2024"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
capnp = { version = "0.25.4", default-features = false }
capnp-rpc = { version = "0.25.1", default-features = false }
conmon-common = { version = "0.8.0", path = "../common" }
futures = { version = "0.3.32", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
tokio = { version = "1.51.1", default-features = false, features = ["fs", "macros", "net", "process", "rt", "signal", "time"] }
tokio-util = { version = "0.7.18", default-features = false, features = ["compat"] }
