[package]
name = "conmonrs-cli"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
capnp = { version = "0.26.0", default-features = false }
capnp-rpc = { version = "0.26.0", default-features = false }
conmon-common = { version = "1.0.0", path = "../common" }
futures = { version = "0.3.32", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
tokio = { version = "1.52.3", default-features = false, features = ["fs", "macros", "net", "process", "rt", "signal", "time"] }
tokio-util = { version = "0.7.18", default-features = false, features = ["compat"] }
