[package]
name = "conmon-common"
# Version listed below is also used by .packit.sh
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
capnp = "0.26.0"

[lints]
workspace = true

[build-dependencies]
capnp = { version = "0.26.0", default-features = false }
capnpc = { version = "0.26.0", default-features = false }
