[package]
name = "conmonrs"
version = "0.7.3"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "conmonrs"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { version = "1.0.101", default-features = false }
async-channel = { version = "2.5.0", default-features = false, features = ["std"] }
axum = { version = "0.8.8", default-features = false, features = ["http2", "tokio", "ws"] }
capnp = { version = "0.25.1", default-features = false }
capnp-rpc = { version = "0.25.0", default-features = false }
clap = { version = "4.5.57", default-features = false, features = ["cargo", "derive", "env", "error-context", "help", "std", "usage"] }
conmon-common = { version = "0.7.3", path = "../common" }
futures = { version = "0.3.31", default-features = false }
libc = { version = "0.2.180", default-features = false }
libsystemd = { version = "0.7.2", default-features = false }
linereader = { version = "0.4.0", default-features = false }
lru = { version = "0.16.3", default-features = false }
memchr = { version = "2.8.0", default-features = false }
nix = { version = "0.31.1", default-features = false, features = ["fs", "hostname", "mount", "sched", "signal", "socket", "term", "user"] }
notify = { version = "8.2.0", default-features = false }
opentelemetry = { version = "0.31.0", default-features = false }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = { version = "0.31.0", default-features = false, features = ["semconv_experimental"] }
sendfd = { version = "0.4.4", default-features = false, features = ["tokio"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
signal-hook = { version = "0.4.3", default-features = false, features = ["iterator"] }
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
tokio = { version = "1.49.0", default-features = false, features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "time"] }
tokio-eventfd = { version = "0.2.2", default-features = false }
tokio-seqpacket = { version = "0.8.1", default-features = false }
tokio-util = { version = "0.7.18", default-features = false, features = ["compat"] }
tower-http = { version = "0.6.8", default-features = false, features = ["trace"] }
tracing = { version = "0.1.44", default-features = false }
tracing-opentelemetry = { version = "0.32.1", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt"] }
time = { version = "0.3.47", default-features = false, features = ["formatting", "local-offset", "parsing", "std"] }
uuid = { version = "1.20.0", default-features = false, features = ["v4", "fast-rng"] }

[dev-dependencies]
mockall = { version = "0.14.0", default-features = false }
tempfile = { version = "3.25.0", default-features = false }
